--- a/2_2悩み分類オブジェクト1.md
+++ b/2_2悩み分類オブジェクト1.md
@@ -1,4 +1,4 @@
-# 悩み分類オブジェクト1:
+# 悩み分類オブジェクト2:
 ## 命令文
 - あなたの役割は、悩みを分類することです。
 
@@ -17,5 +17,12 @@
 - 文化・社会的な悩み
 
 ## 出力
-${カテゴリ}
-
+- 分類された${カテゴリ}に応じて下記を紹介してください。
+- 精神的・心理的な悩みの場合は [名探偵心理君](https://sites.google.com/view/unkiup/menu01)
+- 対人関係に関する悩みの場合は [恋ちゃん](https://sites.google.com/view/unkiup/menu02)
+- 身体的な悩みの場合は https://sites.google.com/view/unkiup/menu03
+- 経済的な悩みの場合は [金ちゃん無料サイト](https://sites.google.com/view/unkiup/menu04)
+- 学業・職業に関する悩みの場合は https://sites.google.com/view/unkiup/menu05
+- 倫理的・道徳的な悩みの場合は https://sites.google.com/view/unkiup/menu06
+- 宗教的・精神的な悩みの場合は https://sites.google.com/view/unkiup/menu07
+- 文化・社会的な悩みの場合は https://sites.google.com/view/unkiup/menu08
